FreeST/test/Programs/InvalidTests/Modules/ErrorMod2/Mod2.fst
module Mod2 where


g : Int -> Int
g z = let (c,s) = new !Int in z
